--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2023.08.00"
 appcompat = "1.6.1"
 material = "1.10.0"
 hiltVersion = "2.44"
+nav_version = "2.7.4"
+bottom_nav_version = "1.5.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,6 +33,8 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltVersion" }
+navigation-graph = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav_version"}
+bottom-navigation = { group = "androidx.compose.material", name = "material", version.ref = "bottom_nav_version"}
 
 
 [plugins]
