--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
+activityKtx = "1.2.0"
 agp = "8.3.1"
+glide = "4.15.1"
 kotlin = "1.9.0"
 coreKtx = "1.12.0"
 junit = "4.13.2"
@@ -16,9 +18,13 @@ bottom_nav_version = "1.5.3"
 uiautomatorV18 = "2.2.0-alpha1"
 uitoolingpreview_version = "1.6.8"
 permission = "0.36.0"
+gson = "2.9.0"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -42,6 +48,7 @@ bottom-navigation = { group = "androidx.compose.material", name = "material", ve
 viewmodel-compose = {group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version = "2.7.0"}
 androidx-uiautomator-v18 = { group = "androidx.test.uiautomator", name = "uiautomator-v18", version.ref = "uiautomatorV18" }
 permission = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "permission" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
