--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,13 +23,15 @@ permission = "0.36.0"
 gson = "2.9.0"
 serialization = "1.7.10"
 exoplayer = "1.4.1"
+work_manager_version = "2.9.1"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
-androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+room-testing = { module = "androidx.room:room-testing", version.ref = "roomRuntime" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -62,6 +64,8 @@ exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref 
 exoplayer-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer" }
 exoplayer-common = { group = "androidx.media3", name = "media3-common", version.ref = "exoplayer" }
 
+workmanger = { group = "androidx.work", name = "work-runtime-ktx", version = "work_manager_version" }
+workmanger-test = { group = "androidx.work", name = "work-testing", version = "work_manager_version" }
 
 
 [plugins]
