--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ exoplayerVersion = "2.19.1"
 ffmpegKitMin = "6.0-1"
 glide = "4.15.1"
 gsonVersion = "2.10.1"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -18,7 +18,7 @@ composeBom = "2023.08.00"
 appcompat = "1.6.1"
 localization = "1.2.9"
 material = "1.10.0"
-hiltVersion = "2.44"
+hiltVersion = "2.52"
 nav_version = "2.8.0"
 bottom_nav_version = "1.5.3"
 pagingRuntime = "3.3.2"
@@ -97,5 +97,6 @@ jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "k
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
 serialization = { id = 'org.jetbrains.kotlin.plugin.serialization', version.ref = "serialization" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 
